Cambio family-font h1 general

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@
 
 #bienvenidostexto {
     font-size: 40px;
+    font-family: "kurale";
     text-align: center;
     color: rgb(121, 48, 0);
     margin-top: 30vh;
