--- a/css/general.css
+++ b/css/general.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kurale&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 h1 {
-    font-family: "Kurale";
+    font-family: "Open Sans";
 }
 
 h2 {
